syntax = "proto3";

option csharp_namespace = "RTSharp.Daemon.Protocols.DataProvider";

import "google/protobuf/wrappers.proto";
import "google/protobuf/duration.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";
import "DataProvider/CommandReply.proto";
import "DataProvider/Types.proto";

service GRPCStatsService {
    rpc GetAllTimeDataStats (google.protobuf.Empty) returns (AllTimeDataStats);
}

message AllTimeDataStats {
    uint64 Download = 1;
    uint64 Upload = 2;
    float ShareRatio = 3;
}